streamwidget: Use a drop-down list instead of a button and a popup for selecting the device

This looks better, requires less code and probably fixes
https://gitlab.freedesktop.org/pulseaudio/pavucontrol/issues/63