src/sourceoutputwidget.h
@@ -38,38 +38,16 @@ public:
     uint32_t index, clientIndex;
     void setSourceIndex(uint32_t idx);
     uint32_t sourceIndex();
+    void updateDeviceComboBox();
 #if HAVE_SOURCE_OUTPUT_VOLUMES
     virtual void executeVolumeUpdate();
     virtual void onMuteToggleButton();
 #endif
-    virtual void onDeviceChangePopup();
     virtual void onKill();
+    virtual void onDeviceComboBoxChanged();
 
 private:
     uint32_t mSourceIndex;
-
-    void clearMenu();
-    void buildMenu();
-
-    Gtk::Menu menu;
-
-    struct SourceMenuItem {
-      SourceMenuItem(SourceOutputWidget *w, const char *label, uint32_t i, bool active) :
-      widget(w),
-      menuItem(label),
-      index(i) {
-        menuItem.set_active(active);
-        menuItem.set_draw_as_radio(true);
-        menuItem.signal_toggled().connect(sigc::mem_fun(*this, &SourceMenuItem::onToggle));
-      }
-
-      SourceOutputWidget *widget;
-      Gtk::CheckMenuItem menuItem;
-      uint32_t index;
-      void onToggle();
-    };
-
-    std::map<uint32_t, SourceMenuItem*> sourceMenuItems;
 };
 
 #endif
